objects/JObject__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JObject</relationshipLabel>
        <relationshipName>JObject</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>JObject</relationshipLabel>
        <relationshipName>JObject</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>abcc__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>abcc__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hello__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>hello__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>JObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JObject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>